HelloUltraviolet/Fixtures/RejectedSource/Comptime/ComptimeIfConditionType/Expected.uv
//! Expected diagnostic metadata for the ComptimeIfConditionType rejected-source specimen.

expectedDiagnostic("E-CTE-0081", "diagnostics.22.CompileTimeFormsDiagnosticsReference")
